--- a/ecom_app/templates/result_Home.html
+++ b/ecom_app/templates/result_Home.html
@@ -46,12 +46,12 @@
 </a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="#">
+<a class="nav-link"  href="{% url 'login' %}">
 <i class="fas fa-user"></i>
 </a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="#">
+<a class="nav-link"  href="{% url 'cart' %}">
 <i class="fas fa-shopping-cart"></i>
 </a>
 </li>
@@ -274,52 +274,103 @@
 <!-- Left and right controls -->
 </div>
 </div>
-<!-- 6 image top and bootom -->
+
+
+
+
+
+
+
+
+
+
+<!-- 6 image top and bootom  All Access-->
 <div class="container mt-5">
-<div class="text-center py-2">
+<div class="text-center py-2" >
 <img alt="" src="{% static 'assest/Screenshot 2023-11-27 155129.png' %}"/>
 </div>
 <div class="row pt-5">
-<div class="col-md-2 col-6 mb-3">
-<img alt="" class="img-fluid" src="{% static 'assest/49582470561822.jpg' %}"/>
+<div class="col-md-2 col-6 mb-3" >
+    <a href="{% url 'details' %}">
+        <img alt="" class="img-fluid" src="{% static 'assest/49582470561822.jpg' %}"/>
+
+    </a>
 </div>
 <div class="col-md-2 col-6 mb-3">
+    <a href="{% url 'details' %}">
 <img alt="" class="img-fluid" src="{% static 'assest/49582470627358.jpg' %}"/>
+
+    </a>
 </div>
 <div class="col-md-2 col-6 mb-3">
+    <a href="{% url 'details' %}">
 <img alt="" class="img-fluid" src="{% static 'assest/49582470692894.jpg' %}"/>
+
+    </a>
 </div>
 <div class="col-md-2 col-6 mb-3">
+    <a href="{% url 'details' %}">
 <img alt="" class="img-fluid" src="{% static 'assest/49582470758430.jpg' %}"/>
+
+    </a>
 </div>
 <div class="col-md-2 col-6 mb-3">
+    <a href="{% url 'details' %}">
 <img alt="" class="img-fluid" src="{% static 'assest/49582470823966.jpg' %}"/>
+
+    </a>
 </div>
 <div class="col-md-2 col-6 mb-3">
+    <a href="{% url 'details' %}">
 <img alt="" class="img-fluid" src="{% static 'assest/49582470889502.jpg' %}"/>
+
+    </a>
 </div>
 </div>
 <div class="row" style="margin-top: 10rem;">
 <div class="col-md-2 col-6 mb-3">
+    <a href="{% url 'details' %}">
 <img alt="" class="img-fluid" src="{% static 'assest/49582470561822.jpg' %}"/>
+
+    </a>
 </div>
 <div class="col-md-2 col-6 mb-3">
+    <a href="{% url 'details' %}">
 <img alt="" class="img-fluid" src="{% static 'assest/49582470627358.jpg' %}"/>
+
+    </a>
 </div>
 <div class="col-md-2 col-6 mb-3">
+    <a href="{% url 'details' %}">
 <img alt="" class="img-fluid" src="{% static 'assest/49582470692894.jpg' %}"/>
+
+    </a>
 </div>
 <div class="col-md-2 col-6 mb-3">
+    <a href="{% url 'details' %}">
 <img alt="" class="img-fluid" src="{% static 'assest/49582470758430.jpg' %}"/>
+
+    </a>
 </div>
 <div class="col-md-2 col-6 mb-3">
+    <a href="{% url 'details' %}">
 <img alt="" class="img-fluid" src="{% static 'assest/49582470823966.jpg' %}"/>
+
+    </a>
 </div>
 <div class="col-md-2 col-6 mb-3">
+    <a href="{% url 'details' %}">
 <img alt="" class="img-fluid" src="{% static 'assest/49582470889502.jpg' %}"/>
+
+    </a>
 </div>
 </div>
 </div>
+
+
+
+
+
 <!-- 6 image in row section -->
 <div class="container mt-5">
 <div class="m-auto">
