--- a/ecom_app/static/style/styel.css
+++ b/ecom_app/static/style/styel.css
@@ -8,6 +8,7 @@
 }
 .roboto-font {
   font-family: "Roboto", sans-serif;
+ 
 }
 
 /* Navbar sectons */
@@ -16,6 +17,7 @@
 }
 .navbar-nav .dropdown:hover .dropdown-menu {
   display: block;
+  font-size: 15px;
 }
 .nav-link {
   text-align: center;
@@ -31,6 +33,12 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+}
+.cart-section{
+  margin: 0 auto;
+  width: 70%;
+  height: 40vh;
+  background-color: rgb(189, 182, 182);
 }
 
 .vertical-line {
@@ -68,11 +76,15 @@ li {
   font-size: 1.3em;
   margin: 0 0.5rem;
 }
+.m-auto img{
+  width: 100%;
+}
 .store-icons {
   padding: .3rem 0;
   border-radius: 10px;
   height: 50px;
 }
+
 /* respinsive sections css */
 @media (max-width: 770px) {
   .vertical-line {
@@ -84,3 +96,23 @@ li {
     flex-wrap: wrap;
   }
 }
+/* login page design */
+.box{
+  display: none;
+}
+.position-properties{
+  cursor: pointer;
+  right: 0;
+}
+.input-box{
+  background: none;
+  border: none;
+ border-bottom : 1px solid #936917 ;
+  outline: none;
+}
+
+
+.icons-heart{
+  right: 10px;
+}
+
