--- a/ecom_app/templates/base.html
+++ b/ecom_app/templates/base.html
@@ -36,6 +36,7 @@
 </style>
 
 <body>
+    
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         {% if org_name %}
         <a class="navbar-brand" href=""
@@ -96,9 +97,11 @@
             </ul>
         </div>
     </nav>
+
+
     <div class="dropdown-divider"></div>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light desktop">
         <div class="container">
             <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler" data-target="#navbarNav" data-toggle="collapse" type="button">
@@ -317,18 +320,15 @@
             </div>
         </div>
     </nav>
-<hr>
+
 
 
     {% block content %}{% endblock %}
 
 
-
-
-
     <!-- footer section -->
     <!-- footer    above  section -->
-    <main class="footer-above-section mt-5">
+    <main class="footer-above-section mt-4 ">
         <div class="container pt-4 pb-1">
             <div class="row">
                 <!-- Left Side - Select, Search Bar, Button -->
@@ -375,7 +375,7 @@
         </div>
     </main>
     <!-- footer    --  section -->
-    <footer class="footer-section">
+    <footer class="footer-section ">
         <div class="container pt-5">
             <div class="row roboto-font">
                 <div class="col-md-2 col-sm-4">
