--- a/ecom_app/templates/base.html
+++ b/ecom_app/templates/base.html
@@ -17,7 +17,7 @@
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- custom css -->
     <link href="{% static 'style/style.css' %}" rel="stylesheet" />
-    
+
 </head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -42,15 +42,15 @@
         <div class="d-flex align-items-center justify-content-between px-3">
             <a href="/" class="text-decoration-none text-black"><i class="bi bi-arrow-left fa-2x"></i></a>
             <a class="navbar-brand" href=""
-            style="color: #818181; display: block; font-size: 16px; font-weight: 300; line-height: 28px; padding: 10px 15px 20px; position: relative; text-align: center; text-transform: uppercase; transition: all .05s;">
-            SASCONIT
-        </a>
+                style="color: #818181; display: block; font-size: 16px; font-weight: 300; line-height: 28px; padding: 10px 15px 20px; position: relative; text-align: center; text-transform: uppercase; transition: all .05s;">
+                SASCONIT
+            </a>
             <a href="result_Cart" class="text-decoration-none text-black"><i class="bi bi-bag-fill fa-2x"></i></a>
         </div>
     </nav>
-    
 
-<!-- desktop navbar view -->
+
+    <!-- desktop navbar view -->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white desktop ">
         {% if org_name %}
@@ -129,9 +129,13 @@
                             {{brand.ItemType_Name}}
                         </a>
                         <div aria-labelledby="navbarDropdown2" class="dropdown-menu">
-                            <a class="dropdown-item" href="">Action</a>
-                            <a class="dropdown-item" href="">Another action</a>
-                            <a class="dropdown-item" href="">Something else here</a>
+                            {% for sub_brand in item_sub_row %}
+
+                            {% if brand.ItemType_Name == sub_brand.ItemType_Name %}
+                            <a class="dropdown-item" href="">{{sub_brand.ItemSubType_Name}}</a>
+                            {% endif %}
+
+                            {% endfor %}
                         </div>
                     </li>
                     {% endfor %}
@@ -388,7 +392,7 @@
     </main>
     <!-- footer    --  section -->
     <footer class="footer-section ">
-        <div class="container pt-5 footer-text" >
+        <div class="container pt-5 footer-text">
             <div class="row roboto-font">
                 <div class="col-md-2 col-sm-4">
                     <h4>SHOP LUXURY</h4>
@@ -461,7 +465,7 @@
     </footer>
 
 
-    
+
     <script src="{% static 'style/script.js' %}"></script>
     <script crossorigin="anonymous" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
@@ -477,40 +481,40 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script type="text/javascript">
-$('.autoplay').slick({
-  dots: true,
-  infinite: false,
-  speed: 300,
-  slidesToShow: 4,
-  slidesToScroll: 4,
-  responsive: [
-    {
-      breakpoint: 1024,
-      settings: {
-        slidesToShow: 3,
-        slidesToScroll: 3,
-        infinite: true,
-        dots: true
-      }
-    },
-    {
-      breakpoint: 600,
-      settings: {
-        slidesToShow: 2,
-        slidesToScroll: 2
-      }
-    },
-    {
-      breakpoint: 480,
-      settings: {
-        slidesToShow: 1,
-        slidesToScroll: 1
-      }
-    }
-   
-  ]
-});
-	
+        $('.autoplay').slick({
+            dots: true,
+            infinite: false,
+            speed: 300,
+            slidesToShow: 4,
+            slidesToScroll: 4,
+            responsive: [
+                {
+                    breakpoint: 1024,
+                    settings: {
+                        slidesToShow: 3,
+                        slidesToScroll: 3,
+                        infinite: true,
+                        dots: true
+                    }
+                },
+                {
+                    breakpoint: 600,
+                    settings: {
+                        slidesToShow: 2,
+                        slidesToScroll: 2
+                    }
+                },
+                {
+                    breakpoint: 480,
+                    settings: {
+                        slidesToShow: 1,
+                        slidesToScroll: 1
+                    }
+                }
+
+            ]
+        });
+
 
 
     </script>
