home page and list product page dynamic without image

--- a/ecom_app/static/style/style.css
+++ b/ecom_app/static/style/style.css
@@ -98,7 +98,7 @@ li {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
 }
-.follow-icons{
+.follow-icons {
   display: flex;
   align-items: center;
 }
@@ -476,16 +476,25 @@ a {
   display: none;
 }
 
+.text-over-image {
+  position: absolute;
+  bottom: 6px;
+  left: 26px;
+  color: white;
+  font-size: 20px;
+
+}
+
 @media (max-width: 760px) {
-  .follow-icons{
-    margin-top: .5rem;
+  .follow-icons {
+    margin-top: 0.5rem;
     justify-content: center !important;
     text-align: center !important;
   }
-  .container.footer-text{
+  .container.footer-text {
     text-align: center !important;
   }
-  .cart-section{
+  .cart-section {
     margin: 0 auto !important;
     width: 90% !important;
     height: 70vh !important;
@@ -613,8 +622,8 @@ input[type="checkbox"] {
 }
 
 .show-sort {
- display: none;
+  display: none;
 }
-.text-hover h2:hover{
+.text-hover h2:hover {
   color: rgb(173, 165, 10);
 }
