--- a/ecom_app/templates/base.html
+++ b/ecom_app/templates/base.html
@@ -77,7 +77,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="">
+                    <a class="nav-link" >
                         <i class="fas fa-search"></i>
                     </a>
                 </li>
