--- a/ecom_app/templates/list_product.html
+++ b/ecom_app/templates/list_product.html
@@ -879,7 +879,7 @@
                         </a>
                         <div class="card-body">
                             <a class="nav-link" href="{% url 'list_product_details' %}">
-                                <img alt="Product 1 Image" class="img-fluid" src="{% static 'assest/addidas.jpeg' %}" />
+                                <img alt="Product 1 Image" class="img-fluid" src="https://saasapps.in:2082/media/{{item.image_front}}" />
                                 <h4 class="card-title text-center roboto-font">{{item.item_name}}</h4>
                                 <p class="card-text text-center" style="font-weight: 300;">{{item.item_subtype}}</p>
                             </a>
