--- a/ecom_app/templates/result_Home.html
+++ b/ecom_app/templates/result_Home.html
@@ -42,7 +42,7 @@
         {% for brand in item_rows %}
         <div class="col-md-2 col-6 mb-3 position-relative overflow-hidden">
             <a href="{% url 'list_product' item_type_name=brand.ItemType_Name %}">
-                <img alt="" class="img-fluid" src="{% static 'assest/2-more.jpeg' %}" />
+                <img alt="" class="img-fluid" src="https://saasapps.in:2082/media/{{brand.item_image}}" />
             </a>
             <div class="text-over-image ">
                 <p class="text-black ">{{brand.ItemType_Name}}</p>
