--- a/staticfiles/style/style.css
+++ b/staticfiles/style/style.css
@@ -482,6 +482,7 @@ a {
   left: 26px;
   color: white;
   font-size: 20px;
+  text-shadow: -1px -1px 0 white, 1px -1px 0 white, -1px 1px 0 white, 1px 1px 0 white;
 
 }
 
